Add styling to nav and side bars

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -21,16 +21,14 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
 }
 
-[class^="col-"] {
+/*[class^="col-"] {
   position: relative;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
-}
+}*/
   
 .box {
   margin: 20px;
