--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,23 +1,43 @@
 /* Colors */
-$color-dark: #000000;
+$color-black: #000000;
 $color-blue: #3d79b4;
 $color-red: #ff0000;
 $color-white: #ffffff;
 
+$color-menu: #191919;
+$color-dark: #333333;
+
+$color-grey-1: #979799;
+$color-grey-2: #bdbdbd;
+$color-grey-3: #e3e3e3;
+$color-grey-4: #f5f5f2;
+
+$color-orange-1: #f58220;
+$color-orange-2: #ffa200;
+
+$color-green-1: #04ae00;
+$color-green-2: #74b67a;
+$color-green-3: #96cc9b;
+
+$color-pink-1: #de5252;
+$color-pink-2: #ec7171;
 
 /* Fonts */
-$font-main: "Open Sans", Helvetica, Arial;
+$font-main: "Roboto", Helvetica, Arial;
 $font-secondary: "Open Sans", Helvetica, Arial;
 
 /* Font sizes */
 $font-size: 12px;
 
 /* Font weight */
+$font-bold: 700;
+$font-medium: 500;
 $font-normal: 400;
+$font-light: 300;
 
 
 /* Border */
-$border: 1px solid $color-dark;
+$border: 1px solid $color-grey-3;
 
 
 /* Transition */
