--- a/src/sass/components/_boss.scss
+++ b/src/sass/components/_boss.scss
@@ -1,9 +1,9 @@
 .boss {
   padding-top: 1.2em;
-  border-top: $border;
+  border-top: 1px solid $color-dark;
   
   &__title {
-    color: $color-dark;
+    color: $color-grey-2;
     font-weight: $font-normal;
     text-transform: uppercase;
     padding-left: 1.3em;
@@ -11,7 +11,7 @@
 
   &__name {
     position: absolute;
-    top: 13px;
+    top: 20px;
     padding-left: 10px;
     color: $color-blue;
     font-weight: $font-normal;
