--- a/src/sass/section/_sidebar.scss
+++ b/src/sass/section/_sidebar.scss
@@ -4,9 +4,9 @@
   top: 0;
   left: 0;
   width: 200px;
-  height: 100%;
+  height: 100%;  
   z-index: 1;
-  background: $color-dark;
+  background: $color-menu;
   transition: $transition;
 }
 
@@ -24,6 +24,8 @@
     margin: 1.7em 0 1em 1.7em;
   }
 
+
+
   .menu {
     &__item {
       width: 70px;
@@ -36,4 +38,3 @@
     }
   }
 }
-
