--- a/src/sass/section/_sidebar.scss
+++ b/src/sass/section/_sidebar.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 200px;
-  height: 100%;  
+  height: 100%;
   z-index: 1;
   background: $color-menu;
   transition: $transition;
@@ -24,8 +24,6 @@
     margin: 1.7em 0 1em 1.7em;
   }
 
-
-
   .menu {
     &__item {
       width: 70px;
@@ -38,3 +36,34 @@
     }
   }
 }
+
+.boss {
+  padding-top: 1.2em;
+  border-top: 1px solid $color-dark;
+  
+  &__title {
+    color: $color-grey-2;
+    font-weight: $font-normal;
+    text-transform: uppercase;
+    padding-left: 1.3em;
+  }
+
+  &__name {
+    position: absolute;
+    top: 20px;
+    padding-left: 10px;
+    color: $color-blue;
+    font-weight: $font-normal;
+  }
+
+  &--dot {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    top: 5%;
+    right: 70%;
+    background-color: $color-green-1;
+  }
+}
+  
