--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -52,7 +52,7 @@
 .center-content {
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
 
 .scroll-wrapper {
